<resources>
    <string name="app_name">PizzaBuilder</string>
    <string name="app_title">Pizza Builder</string>
    <string name="instructions">Tap the pizza below to begin!</string>
    <string name="question_start">Type your pizza name below, and press ENTER.</string>
    <string name="see_list">See List of Existing Pizzas</string>
    <string name="list_item">Name of Pizza</string>
    <string name="list_item_topping">Name of Topping</string>
    <string name="what_toppings">What toppings would you like to add?</string>
    <string name="or_add">OR add the custom toppings that you want below, and then press ENTER:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter">ENTER</string>
    <string name="done_toppings">Done Adding Toppings</string>
    <string name="pizza_name">Jeff\'s Pizza...</string>
    <string name="save_pizza_and_name">Save Pizza and Give It a Name</string>
    <string name="create_new_pizza">Create new Pizza</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
