<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroud"
    tools:context="layout.PizzaSaveAndName">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/textMarginFragments"
            android:text="@string/question_start"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_pizza_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_start"
            android:layout_margin="@dimen/textMargin"
            android:background="@color/colorTextInputBackground"
            android:hint="@string/pizza_name"
            android:textAppearance="?android:textAppearanceLarge"/>


        <Button
            android:id="@+id/enter_pizza_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_pizza_name"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/enter" />


        <Button
            android:id="@+id/see_pizza_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/buttonMargin"
            android:text="@string/see_list"
            android:visibility="invisible"/>

    </RelativeLayout>


</FrameLayout>
